# fivem-player-proximity

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: file_watcher.rs  files.rs  hotkeys.rs  main.rs  ui.rs
